--- a/src/assets/sass/utils/_variables.scss
+++ b/src/assets/sass/utils/_variables.scss
@@ -3,7 +3,8 @@
 $font-family-sans: "DM Sans", sans-serif;
 
 $color-primary: #901c1c;
-$color-secondary: #db8876;
+$color-secondary: #d3573c;
+$color-tertiary: #db8876;
 
 $white: #fff;
 $color-grey-100: #fafafa;
