--- a/src/assets/sass/components/_links.scss
+++ b/src/assets/sass/components/_links.scss
@@ -2,9 +2,16 @@
 .skip-link {
   position: absolute;
   left: 50%;
+  padding: 0.1875rem 0.375rem;
   transform: translate(-50%, -100%);
   transition: transform 0.3s;
+  border-radius: 0.3125rem;
+  background-color: $color-tertiary;
+  color: $black;
+  font-size: 1.125rem;
   line-height: 30px;
+  line-height: 1.4375rem;
+  text-decoration: none;
 }
 
 .skip-link:focus {
