--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -346,61 +346,62 @@ th {
   display: none;
   position: relative;
   margin-bottom: 3.625rem;
-  padding-right: 1.5625rem;
   font-size: 1.125rem;
+  font-weight: bold;
+  z-index: 10;
 }
 @media (min-width: 48rem) {
   .sort-nav {
-    display: block;
+    display: inline-block;
+    align-items: center;
   }
 }
 
 .sort-nav__label {
+  margin-right: 1.5625rem;
   font-weight: bold;
 }
 
-.sort-nav__select {
-  display: grid;
-  align-items: center;
-  width: 100%;
-  min-width: 15ch;
-  max-width: 30ch;
-  padding: 0.25em 0.5em;
-  border: 1px solid var(--select-border);
-  border-radius: 0.25em;
-  background-color: #901c1c;
-  font-size: 1.25rem;
-  line-height: 1.1;
-  cursor: pointer;
-  grid-template-areas: "select";
-}
-.sort-nav__select:focus-within {
-  outline: 3px solid blue;
-}
-.sort-nav__select select {
-  width: 100%;
+.sort-nav__list {
+  position: absolute;
+  top: -0.875rem;
+  left: 100%;
+  height: 3.4375rem;
   margin: 0;
-  padding: 0 1em 0 0;
-  border: none;
-  outline: none;
-  background-color: transparent;
+  padding: 0 0.625rem;
+  border-radius: 0.3125rem;
+  background-color: #901c1c;
   color: #fff;
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-  cursor: inherit;
-  appearance: none;
-  grid-area: select;
+  cursor: default;
+  overflow: hidden;
+}
+.sort-nav__list:focus {
+  height: auto;
+}
+.sort-nav__list::after {
+  display: block;
+  position: absolute;
+  top: 1.3125rem;
+  right: 0.875rem;
+  width: 0.875rem;
+  height: 0.875rem;
+  transform: rotate(45deg);
+  transform-origin: center;
+  border-top: 3px solid #fff;
+  border-left: 3px solid #fff;
+  content: "";
 }
 
-.sort-nav__select::after {
-  grid-area: select;
-  width: 0.8em;
-  height: 0.5em;
-  background-color: #fff;
-  content: "";
-  clip-path: polygon(100% 0%, 0 0%, 50% 100%);
-  justify-self: end;
+.sort-nav__item {
+  padding: 0.875rem 2.625rem 0.875rem 0;
+}
+
+.sort-nav__item:first-child {
+  border-bottom: 1px solid #fff;
+}
+
+.sort-nav__item:last-child {
+  border-top: 1px solid #fff;
 }
 
 /* Layouts */
@@ -521,20 +522,14 @@ body {
   bottom: 0;
   padding: 1.25rem 1.875rem;
   border-radius: 5px 5px 0 0;
-  background-color: #d3573c;
+  background-color: #db8876;
 }
 
-.photographer__likes {
-  position: relative;
-  margin-right: 4.125rem;
-  padding-right: 1.5rem;
-}
 .photographer__likes::after {
-  position: absolute;
-  right: 0;
+  margin-left: 0.375rem;
   color: #000;
-  font-size: 2.125rem;
-  line-height: 2.25rem;
+  font-size: 1.2em;
+  line-height: 1;
   content: "♥";
 }
 
@@ -589,7 +584,8 @@ body {
   }
 
   .photographer__aside {
-    display: block;
+    display: flex;
+    column-gap: 4.1875rem;
   }
 }
 /* Themes */
