--- a/src/assets/sass/components/_forms.scss
+++ b/src/assets/sass/components/_forms.scss
@@ -2,62 +2,60 @@
   display: none;
   position: relative;
   margin-bottom: 3.625rem;
-  padding-right: 1.5625rem;
   font-size: 1.125rem;
+  font-weight: bold;
+  z-index: 10;
 
   @media (min-width: $small-screen) {
-    display: block;
+    display: inline-block;
+    align-items: center;
   }
 }
 
 .sort-nav__label {
+  margin-right: 1.5625rem;
   font-weight: bold;
 }
 
-.sort-nav__select {
-  display: grid;
-  align-items: center;
-  width: 100%;
-  min-width: 15ch;
-  max-width: 30ch;
-  padding: 0.25em 0.5em;
-  border: 1px solid var(--select-border);
-  border-radius: 0.25em;
+.sort-nav__list {
+  position: absolute;
+  top: -0.875rem;
+  left: 100%;
+  height: 3.4375rem;
+  margin: 0;
+  padding: 0 0.625rem;
+  border-radius: 0.3125rem;
   background-color: $color-primary;
-  font-size: 1.25rem;
-  line-height: 1.1;
-  cursor: pointer;
-  grid-template-areas: "select";
+  color: $white;
+  cursor: default;
+  overflow: hidden;
 
-  &:focus-within {
-    outline: 3px solid blue;
+  &:focus {
+    height: auto;
   }
 
-  select {
-    width: 100%;
-    margin: 0;
-    padding: 0 1em 0 0;
-    border: none;
-    outline: none;
-    background-color: transparent;
-    color: $white;
-    font-family: inherit;
-    font-size: inherit;
-    line-height: inherit;
-    cursor: inherit;
-    // A reset of styles, including removing the default dropdown arrow
-    appearance: none;
-    // Resets for consistency
-    grid-area: select;
+  &::after {
+    display: block;
+    position: absolute;
+    top: 1.3125rem;
+    right: 0.875rem;
+    width: 0.875rem;
+    height: 0.875rem;
+    transform: rotate(45deg);
+    transform-origin: center;
+    border-top: 3px solid $white;
+    border-left: 3px solid $white;
+    content: "";
   }
 }
+.sort-nav__item {
+  padding: 0.875rem 2.625rem 0.875rem 0;
+}
 
-.sort-nav__select::after {
-  grid-area: select;
-  width: 0.8em;
-  height: 0.5em;
-  background-color: $white;
-  content: "";
-  clip-path: polygon(100% 0%, 0 0%, 50% 100%);
-  justify-self: end;
+.sort-nav__item:first-child {
+  border-bottom: 1px solid $white;
+}
+
+.sort-nav__item:last-child {
+  border-top: 1px solid $white;
 }
