--- a/src/assets/sass/pages/_photographer.scss
+++ b/src/assets/sass/pages/_photographer.scss
@@ -60,19 +60,15 @@
   bottom: 0;
   padding: 1.25rem 1.875rem;
   border-radius: 5px 5px 0 0;
-  background-color: $color-secondary;
+  background-color: $color-tertiary;
 }
 
 .photographer__likes {
-  position: relative;
-  margin-right: 4.125rem;
-  padding-right: 1.5rem;
   &::after {
-    position: absolute;
-    right: 0;
+    margin-left: 0.375rem;
     color: $black;
-    font-size: 2.125rem;
-    line-height: 2.25rem;
+    font-size: 1.2em;
+    line-height: 1;
     content: "\2665";
   }
 }
@@ -128,6 +124,7 @@
   }
 
   .photographer__aside {
-    display: block;
+    display: flex;
+    column-gap: 4.1875rem;
   }
 }
