--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -335,6 +335,17 @@ th {
   font-size: 0.875rem;
 }
 
+.media__date,
+.media__price {
+  display: none;
+}
+
+@media (min-width: 48rem) {
+  .media__date,
+.media__price {
+    display: inline;
+  }
+}
 .sort-nav {
   display: none;
   position: relative;
@@ -454,15 +465,18 @@ body {
 
 /* Pages */
 .photographer-section {
-  display: grid;
+  display: flex;
   position: relative;
   margin-top: 1.3125rem;
-  grid-template-columns: auto 1fr auto;
+  column-gap: 1rem;
   z-index: 10;
 }
 
-.photographer__name {
+.photographer__resume {
   padding-top: 0.5rem;
+}
+
+.photographer__name {
   color: #d3573c;
   font-size: 2.25rem;
   font-weight: normal;
@@ -502,7 +516,8 @@ body {
 }
 
 .photographer__picture {
-  justify-self: right;
+  flex-shrink: 0;
+  margin-left: auto;
 }
 
 .photographer__img {
@@ -538,11 +553,11 @@ body {
 
 @media (min-width: 48rem) {
   .photographer__name {
+    margin-bottom: 1rem;
     font-size: 4rem;
   }
 
   .photographer__location {
-    margin-top: 1rem;
     font-size: 1.5rem;
   }
 
@@ -559,25 +574,19 @@ body {
     font-size: 1.125rem;
   }
 
+  .photographer__img {
+    width: 12.5rem;
+    height: 12.5rem;
+  }
+
   .photographer__btn-contact {
     position: static;
-    align-self: start;
-    margin-top: 0.5rem;
+    align-self: flex-start;
+    margin-right: auto;
     padding: 1.3125rem 0.6875rem;
     transform: translateX(0);
     font-size: 1.25rem;
     white-space: nowrap;
-    justify-self: start;
-  }
-
-  .photographer__picture {
-    display: flex;
-    align-items: center;
-  }
-
-  .photographer__img {
-    width: 12.5rem;
-    height: 12.5rem;
   }
 
   .photographer__aside {
