--- a/src/assets/sass/pages/_photographer.scss
+++ b/src/assets/sass/pages/_photographer.scss
@@ -1,13 +1,16 @@
 .photographer-section {
-  display: grid;
+  display: flex;
   position: relative;
   margin-top: 1.3125rem;
-  grid-template-columns: auto 1fr auto;
+  column-gap: 1rem;
   z-index: 10;
 }
 
-.photographer__name {
+.photographer__resume {
   padding-top: 0.5rem;
+}
+
+.photographer__name {
   color: $color-secondary;
   font-size: 2.25rem;
   font-weight: normal;
@@ -16,6 +19,7 @@
 
 .photographer__location {
   margin-top: 0.25 rem;
+
   color: $color-primary;
   font-size: 0.8125rem;
   font-weight: normal;
@@ -47,7 +51,8 @@
 }
 
 .photographer__picture {
-  justify-self: right;
+  flex-shrink: 0;
+  margin-left: auto;
 }
 
 .photographer__img {
@@ -85,11 +90,11 @@
 
 @media (min-width: $small-screen) {
   .photographer__name {
+    margin-bottom: 1rem;
     font-size: 4rem;
   }
 
   .photographer__location {
-    margin-top: 1rem;
     font-size: 1.5rem;
   }
 
@@ -106,25 +111,19 @@
     font-size: 1.125rem;
   }
 
+  .photographer__img {
+    width: 12.5rem;
+    height: 12.5rem;
+  }
+
   .photographer__btn-contact {
     position: static;
-    align-self: start;
-    margin-top: 0.5rem;
+    align-self: flex-start;
+    margin-right: auto;
     padding: 1.3125rem 0.6875rem;
     transform: translateX(0);
     font-size: 1.25rem;
     white-space: nowrap;
-    justify-self: start;
-  }
-
-  .photographer__picture {
-    display: flex;
-    align-items: center;
-  }
-
-  .photographer__img {
-    width: 12.5rem;
-    height: 12.5rem;
   }
 
   .photographer__aside {
