--- a/src/assets/sass/components/_dropdown.scss
+++ b/src/assets/sass/components/_dropdown.scss
@@ -1,10 +1,8 @@
 .sort-nav {
   display: none;
-  position: relative;
   margin-bottom: 3.625rem;
   font-size: 1.125rem;
   font-weight: bold;
-  z-index: 10;
 
   @media (min-width: $small-screen) {
     display: inline-block;
@@ -13,8 +11,9 @@
 }
 
 .sort-nav__label {
-  margin-right: 1.5625rem;
+  position: relative;
   font-weight: bold;
+  z-index: 10;
 }
 
 .sort-nav__list {
@@ -23,34 +22,54 @@
   left: 100%;
   height: 3.4375rem;
   margin: 0;
-  padding: 0 0.625rem;
+  margin-left: 1.5625rem;
+  padding: 0;
+  transition: height 200ms ease-in-out;
   border-radius: 0.3125rem;
   background-color: $color-primary;
   color: $white;
   cursor: default;
   overflow: hidden;
 
-  &:focus {
+  &:focus-within {
     height: auto;
+  }
+
+  &:hover::after,
+  &:focus-within::after {
+    border-color: $black;
+  }
+
+  &:focus-within::after {
+    transform: rotate(225deg);
   }
 
   &::after {
     display: block;
     position: absolute;
-    top: 1.3125rem;
+    top: 1em;
     right: 0.875rem;
     width: 0.875rem;
     height: 0.875rem;
     transform: rotate(45deg);
     transform-origin: center;
-    border-top: 3px solid $white;
-    border-left: 3px solid $white;
+    transition: transform 200ms ease-in-out;
+    border-right: 3px solid $white;
+    border-bottom: 3px solid $white;
+    pointer-events: none;
     content: "";
   }
 }
+
 .sort-nav__item {
-  padding: 0.875rem 2.625rem 0.875rem 0;
+  padding: 0.875rem 3.25rem 0.875rem 0.625rem;
   white-space: nowrap;
+
+  &:hover,
+  &:focus {
+    background-color: $color-tertiary;
+    color: $black;
+  }
 }
 
 .sort-nav__item:first-child {
