--- a/src/assets/sass/components/_gallery.scss
+++ b/src/assets/sass/components/_gallery.scss
@@ -57,7 +57,7 @@
   display: none;
 }
 
-@media (min-width: $small-screen) {
+@media (min-width: $medium-screen) {
   .media__date,
   .media__price {
     display: inline;
