--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,8 +164,8 @@ select {
   left: 0;
   background-color: #fff;
   color: #901c1c;
-  font-size: 1.4rem;
-  line-height: 1;
+  font-size: 1.2rem;
+  line-height: 1.1;
   content: "♥";
 }
 
@@ -335,13 +335,22 @@ th {
   font-size: 0.875rem;
 }
 
+.media__date,
+.media__price {
+  display: none;
+}
+
+@media (min-width: 62rem) {
+  .media__date,
+.media__price {
+    display: inline;
+  }
+}
 .sort-nav {
   display: none;
-  position: relative;
   margin-bottom: 3.625rem;
   font-size: 1.125rem;
   font-weight: bold;
-  z-index: 10;
 }
 @media (min-width: 48rem) {
   .sort-nav {
@@ -351,8 +360,9 @@ th {
 }
 
 .sort-nav__label {
-  margin-right: 1.5625rem;
+  position: relative;
   font-weight: bold;
+  z-index: 10;
 }
 
 .sort-nav__list {
@@ -361,33 +371,47 @@ th {
   left: 100%;
   height: 3.4375rem;
   margin: 0;
-  padding: 0 0.625rem;
+  margin-left: 1.5625rem;
+  padding: 0;
+  transition: height 200ms ease-in-out;
   border-radius: 0.3125rem;
   background-color: #901c1c;
   color: #fff;
   cursor: default;
   overflow: hidden;
 }
-.sort-nav__list:focus {
+.sort-nav__list:focus-within {
   height: auto;
+}
+.sort-nav__list:hover::after, .sort-nav__list:focus-within::after {
+  border-color: #000;
+}
+.sort-nav__list:focus-within::after {
+  transform: rotate(225deg);
 }
 .sort-nav__list::after {
   display: block;
   position: absolute;
-  top: 1.3125rem;
+  top: 1em;
   right: 0.875rem;
   width: 0.875rem;
   height: 0.875rem;
   transform: rotate(45deg);
   transform-origin: center;
-  border-top: 3px solid #fff;
-  border-left: 3px solid #fff;
+  transition: transform 200ms ease-in-out;
+  border-right: 3px solid #fff;
+  border-bottom: 3px solid #fff;
+  pointer-events: none;
   content: "";
 }
 
 .sort-nav__item {
-  padding: 0.875rem 2.625rem 0.875rem 0;
+  padding: 0.875rem 3.25rem 0.875rem 0.625rem;
   white-space: nowrap;
+}
+.sort-nav__item:hover, .sort-nav__item:focus {
+  background-color: #db8876;
+  color: #000;
 }
 
 .sort-nav__item:first-child {
@@ -454,15 +478,18 @@ body {
 
 /* Pages */
 .photographer-section {
-  display: grid;
+  display: flex;
   position: relative;
   margin-top: 1.3125rem;
-  grid-template-columns: auto 1fr auto;
+  column-gap: 1rem;
   z-index: 10;
 }
 
-.photographer__name {
+.photographer__resume {
   padding-top: 0.5rem;
+}
+
+.photographer__name {
   color: #d3573c;
   font-size: 2.25rem;
   font-weight: normal;
@@ -502,7 +529,8 @@ body {
 }
 
 .photographer__picture {
-  justify-self: right;
+  flex-shrink: 0;
+  margin-left: auto;
 }
 
 .photographer__img {
@@ -538,11 +566,11 @@ body {
 
 @media (min-width: 48rem) {
   .photographer__name {
+    margin-bottom: 1rem;
     font-size: 4rem;
   }
 
   .photographer__location {
-    margin-top: 1rem;
     font-size: 1.5rem;
   }
 
@@ -559,25 +587,19 @@ body {
     font-size: 1.125rem;
   }
 
+  .photographer__img {
+    width: 12.5rem;
+    height: 12.5rem;
+  }
+
   .photographer__btn-contact {
     position: static;
-    align-self: start;
-    margin-top: 0.5rem;
+    align-self: flex-start;
+    margin-right: auto;
     padding: 1.3125rem 0.6875rem;
     transform: translateX(0);
     font-size: 1.25rem;
     white-space: nowrap;
-    justify-self: start;
-  }
-
-  .photographer__picture {
-    display: flex;
-    align-items: center;
-  }
-
-  .photographer__img {
-    width: 12.5rem;
-    height: 12.5rem;
   }
 
   .photographer__aside {
