--- a/src/assets/sass/components/_gallery.scss
+++ b/src/assets/sass/components/_gallery.scss
@@ -1,7 +1,7 @@
 .media-gallery {
   display: grid;
   grid-template-columns: 1fr;
-  justify-items: center;
+  justify-items: stretch;
 
   @media (min-width: $small-screen) {
     grid-gap: 1.25rem;
@@ -23,27 +23,64 @@
 }
 
 .media__figure {
-  aspect-ratio: 335/190;
   margin: 0;
-  @supports not (aspect-ratio: 1/1) {
-    height: 18.75rem;
+}
+
+.media__figure-video {
+  --triangle-side: 2rem;
+  --triangle-multiplier: 1.73205; // to get the height of an equilateral triangle
+  --circle-multiplier: 1.1547; // to get the diameter of the circle
+  --overlay-size: calc(var(--triangle-side) * var(--triangle-multiplier));
+  --circle-rayon: calc(var(--circle-multiplier) * var(--triangle-side));
+  --circle-diameter: calc(var(--circle-rayon) * 2);
+  --circle-border: calc(var(--triangle-side) / 3); // random numer to get the width of the circle
+  --delta1: calc(var(--overlay-size) - var(--triangle-side));
+  --delta2: calc(var(--delta1) / 1.4); // magic number that make the triangle fit inside the circle
+
+  display: grid;
+  grid-template-areas: "grid";
+  place-items: center;
+
+  .media {
+    grid-area: grid;
   }
 
-  @media (min-width: $medium-screen) {
-    aspect-ratio: 350/300;
+  &::before,
+  &::after {
+    box-sizing: content-box;
+    opacity: 0.5;
+    content: "";
+    z-index: 10;
+    grid-area: grid;
+  }
 
-    @supports not (aspect-ratio: 1/1) {
-      height: 18.75rem;
-    }
+  &::before {
+    margin-left: var(--delta2);
+    border-top: var(--triangle-side) solid transparent;
+    border-bottom: var(--triangle-side) solid transparent;
+    border-left: var(--overlay-size) solid $color-primary;
+    z-index: 20;
+  }
+
+  &::after {
+    box-sizing: content-box;
+    width: var(--circle-diameter);
+    height: var(--circle-diameter);
+    border: var(--circle-border) solid $color-primary;
+    border-radius: var(--circle-diameter);
   }
 }
 
 .media {
   display: block;
   width: 100%;
-  height: 100%;
+  height: 11.875rem;
   border-radius: 0.3125rem;
   object-fit: cover;
+
+  @media (min-width: $small-screen) {
+    height: 18.75rem;
+  }
 }
 
 .media__footer {
