--- a/src/assets/sass/components/_lightbox.scss
+++ b/src/assets/sass/components/_lightbox.scss
@@ -33,7 +33,7 @@
   height: 100%;
   padding: 0;
   border: 0;
-  background: url(/assets/images/lightbox/arrow.svg) center center / 0.5rem 0.8125rem no-repeat transparent;
+  background: url("../images/lightbox/arrow.svg") center center / 0.5rem 0.8125rem no-repeat transparent;
   cursor: pointer;
   opacity: 0.5;
   transition: opacity 300ms linear;
@@ -49,7 +49,7 @@
   z-index: 120;
   width: 2.5rem;
   height: 1.25rem;
-  background: url(/assets/images/lightbox/close.svg) center center / 0.75rem 0.75rem no-repeat transparent;
+  background: url("../images/lightbox/close.svg") center center / 0.75rem 0.75rem no-repeat transparent;
 }
 
 .lightbox__next:hover,
@@ -68,7 +68,7 @@
 .lightbox__loader {
   width: 2.8125rem;
   height: 2.8125rem;
-  background: url(/assets/images/lightbox/loader.svg) center center no-repeat;
+  background: url("../images/lightbox/loader.svg") center center no-repeat;
   opacity: 0.5;
 }
 
