routes and views

--- a/src/assets/sass/components/_cards.scss
+++ b/src/assets/sass/components/_cards.scss
@@ -7,6 +7,11 @@
 .card-link {
   display: block;
   text-decoration: none;
+
+  > * {
+    //important. Need this for the eventlistener in js
+    pointer-events: none;
+  }
 }
 
 .card__img {
