--- a/src/assets/sass/pages/_page-photographer.scss
+++ b/src/assets/sass/pages/_page-photographer.scss
@@ -1,9 +1,9 @@
 .photographer-section {
-  display: flex;
   position: relative;
-  margin-top: 1.3125rem;
-  column-gap: 1rem;
   z-index: 10;
+  display: flex;
+  margin-top: 3.125rem;
+  column-gap: 1rem;
 }
 
 .photographer__resume {
@@ -33,8 +33,8 @@
 }
 
 .photographer-section .tag-nav {
-  margin: 0.3rem 0 0;
   padding: 0;
+  margin: 0.3rem 0 0;
 }
 
 .photographer-section .tag-list {
@@ -46,8 +46,8 @@
   bottom: 30px;
   left: 50%;
   padding: 0.375rem 1.125rem;
-  transform: translateX(-50%);
   font-size: 1.125rem;
+  transform: translateX(-50%);
 }
 
 .photographer__picture {
@@ -56,29 +56,29 @@
 }
 
 .photographer__img {
-  object-fit: cover;
   width: 6.25rem;
   height: 6.25rem;
   border-radius: 50%;
+  object-fit: cover;
 }
 
 .photographer__aside {
-  display: none;
   position: fixed;
   right: 2.25rem;
   bottom: 0;
+  display: none;
   padding: 1.25rem 1.875rem;
-  border-radius: 5px 5px 0 0;
   background-color: $color-tertiary;
+  border-radius: 5px 5px 0 0;
 }
 
 .photographer__likes {
   &::after {
     margin-left: 0.375rem;
     color: $black;
+    content: "\2665";
     font-size: 1.2em;
     line-height: 1;
-    content: "\2665";
   }
 }
 
@@ -89,6 +89,10 @@
 }
 
 @media (min-width: $small-screen) {
+  .photographer-section {
+    margin-top: 6.25rem;
+  }
+
   .photographer__name {
     margin-bottom: 1rem;
     font-size: 4rem;
@@ -119,10 +123,10 @@
   .photographer__btn-contact {
     position: static;
     align-self: flex-start;
-    margin-right: auto;
     padding: 1.3125rem 0.6875rem;
-    transform: translateX(0);
+    margin-right: auto;
     font-size: 1.25rem;
+    transform: translateX(0);
     white-space: nowrap;
   }
 
