--- a/src/assets/sass/components/_buttons.scss
+++ b/src/assets/sass/components/_buttons.scss
@@ -15,27 +15,31 @@
   }
 }
 
-.btn-like,
-.btn-like::after {
-  width: 1.25rem;
-  height: 1.25rem;
-}
-
 .btn-like {
   position: relative;
   display: inline-block;
   overflow: hidden;
+  width: 1.25rem;
+  height: 1.25rem;
+  padding: 0;
   border: 0;
   background: transparent;
+  border-radius: 50%;
+  transition: box-shadow 200ms linear;
 
   &::after {
     position: absolute;
     top: 0;
+    right: 0;
+    bottom: 0;
     left: 0;
-    background-color: $white;
     color: $color-primary;
     content: "\2665";
     font-size: 1.2rem;
-    line-height: 1.1;
+    line-height: 1;
+  }
+
+  &:hover {
+    box-shadow: 0 0 0 0.125rem $color-primary;
   }
 }
