gallery and lie button mostly css

--- a/src/assets/sass/components/_dropdown.scss
+++ b/src/assets/sass/components/_dropdown.scss
@@ -31,6 +31,7 @@
 
   &:focus-within {
     max-height: 50rem;
+    box-shadow: 0 0 0 0.1875rem $white, 0 0 0 0.375rem $color-focus;
   }
 
   &:focus-within::after {
@@ -63,6 +64,10 @@
   margin-bottom: 0.0625rem;
   border-radius: 0;
   white-space: nowrap;
+}
+
+.sort-nav__item:focus-visible {
+  box-shadow: none;
 }
 
 .sort-nav__item:last-child {
