--- a/src/assets/sass/pages/_page-photographer.scss
+++ b/src/assets/sass/pages/_page-photographer.scss
@@ -88,7 +88,7 @@
   font-size: 1.5rem;
 }
 
-@media (min-width: $small-screen) {
+@media (min-width: $medium-screen) {
   .photographer-section {
     margin-top: 6.25rem;
   }
