--- a/src/assets/sass/utils/_variables.scss
+++ b/src/assets/sass/utils/_variables.scss
@@ -5,6 +5,7 @@ $font-family-sans: "DM Sans", sans-serif;
 $color-primary: #901c1c;
 $color-secondary: #d3573c;
 $color-tertiary: #db8876;
+$color-focus: #05469f;
 
 $white: #fff;
 $color-grey-100: #fafafa;
