--- a/src/assets/sass/base/_accessibility.scss
+++ b/src/assets/sass/base/_accessibility.scss
@@ -14,3 +14,9 @@
   clip: rect(0, 0, 0, 0) !important;
   white-space: nowrap !important;
 }
+
+a:focus-visible,
+.btn:focus-visible {
+  box-shadow: 0 0 0 0.1875rem $white, 0 0 0 0.375rem $color-focus;
+  outline: 0;
+}
