--- a/src/assets/sass/components/_buttons.scss
+++ b/src/assets/sass/components/_buttons.scss
@@ -16,30 +16,91 @@
 }
 
 .btn-like {
+  --heart-size: 0.75rem;
+
+  @media (min-width: $medium-screen) {
+    --heart-size: 1.1875rem;
+  }
+
   position: relative;
-  display: inline-block;
-  overflow: hidden;
-  width: 1.25rem;
-  height: 1.25rem;
+  display: inline-grid;
   padding: 0;
   border: 0;
-  background: transparent;
-  border-radius: 50%;
-  transition: box-shadow 200ms linear;
+  grid-template-areas: "grid";
+  isolation: isolate;
+
+  &::before {
+    z-index: -1;
+    width: var(--heart-size);
+    height: var(--heart-size);
+    margin: auto;
+    background-color: hsla(0, 0%, 50%, 0.5);
+    border-radius: var(--heart-size);
+    content: "";
+    grid-area: grid;
+    opacity: 1;
+    transform: scale(0);
+    transform-origin: center center;
+    transition: transform 100ms ease-out, opacity 200ms 100ms ease-out;
+  }
 
   &::after {
     position: absolute;
-    top: 0;
+    z-index: 10;
     right: 0;
-    bottom: 0;
-    left: 0;
-    color: $color-primary;
-    content: "\2665";
-    font-size: 1.2rem;
-    line-height: 1;
+    bottom: 110%;
+    padding: 0.3em 0.7em;
+    background-color: $color-primary;
+    border-radius: 0.7em;
+    border-bottom-right-radius: 0;
+    color: $white;
+    content: attr(data-tooltip);
+    font-size: 0.7em;
+    opacity: 0;
+    transform: scale(0);
+    transform-origin: bottom right;
+    transition: transform 100ms ease-out, opacity 150ms linear;
+    white-space: nowrap;
   }
 
-  &:hover {
-    box-shadow: 0 0 0 0.125rem $color-primary;
+  .btn-like__icon {
+    position: relative;
+    top: 1px;
+    width: var(--heart-size);
+    height: var(--heart-size);
+    fill: $color-primary;
+    grid-area: grid;
+    transform: scale(1);
+    transform-origin: center;
+    transition: transform 100ms ease-out;
+  }
+
+  &:hover::after,
+  &:focus-visible::after {
+    opacity: 1;
+    transform: scale(1);
+  }
+
+  &:hover .btn-like__icon,
+  &:focus-visible .btn-like__icon {
+    transform: scale(1.2);
+  }
+
+  &:focus-visible {
+    box-shadow: none;
+    outline: none;
+  }
+
+  &:focus-visible .btn-like__icon {
+    fill: $color-focus;
+  }
+
+  &:focus-visible::after {
+    background-color: $color-focus;
+  }
+
+  &:active::before {
+    opacity: 0;
+    transform: scale(1.7);
   }
 }
