--- a/src/assets/sass/components/_cards.scss
+++ b/src/assets/sass/components/_cards.scss
@@ -12,6 +12,18 @@
     //important. Need this for the eventlistener in js
     pointer-events: none;
   }
+
+  &:focus-visible {
+    box-shadow: none;
+  }
+
+  &:hover .card__img {
+    box-shadow: 0 0 0 0.1875rem $white, 0 0 0 0.375rem $color-primary;
+  }
+
+  &:focus-visible .card__img {
+    box-shadow: 0 0 0 0.1875rem $white, 0 0 0 0.375rem $color-focus;
+  }
 }
 
 .card__img {
@@ -19,6 +31,7 @@
   height: 12.5rem;
   margin: auto;
   border-radius: 12.5rem;
+  border-radius: 100vh;
   object-fit: cover;
 }
 
