--- a/src/assets/sass/components/_tags.scss
+++ b/src/assets/sass/components/_tags.scss
@@ -4,24 +4,25 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  gap: 5px;
-  margin: 0;
   padding: 0;
+  margin: 0;
+  gap: 0.3125rem;
 }
 
 .tag-link {
   display: inline-block;
-  padding: 3px 6px;
+  padding: 0.1875rem 0.375rem;
   border: 1px solid $color-grey-300;
-  border-radius: 21px;
   background-color: transparent;
+  border-radius: 1.3125rem;
   color: $color-primary;
-  font-size: 12px;
+  font-size: 0.75rem;
   text-decoration: none;
 }
 
 .tag-link:hover,
-.tag-link:focus {
+.tag-link:focus,
+.tag-active {
   background-color: $color-primary;
   color: $white;
 }
